# grep_cdylib

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/grep_extern/: interface.rs  lib.rs  main.rs  search.rs
src/: config.rs  functions.rs  lib.rs  main.rs  run.rs  search.rs
