[package]
name = "grep_cdylib"
version = "0.1.1"
edition = "2021"
authors = ["Zhuravlev Maksim <monge.gaspard.1746@gmail.com>"]
description = "Actix web server"
license = "MIT OR Apache-2.0"
rust-version = "1.58"
readme = "README.md"
repository = "https://github.com/zhuravlevma/grep"
keywords = ["cdylib", "staticlib", "grep", "c_library", "c_interface"]
categories = ["command-line-utilities"]
homepage = "https://github.com/zhuravlevma/grep_cdylib"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib", "staticlib"]

[dev-dependencies]
libloading = "0.7.1"
anyhow = "1.0.44"